project/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: disallowed-namespace
  # labels:
  #   owner: jose
