project/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
  namespace: myapp
spec:
  containers:
  - name: myapp
    image: jirivasm/hello-wolrd-pyton:latest
    securityContext: {}
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5000
