project/quote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
  namespace: intern
  labels:
    app: flask-demo
    type: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-demo
      type: demo
  template:
    metadata:
      labels:
        app: flask-demo
        type: demo
    spec:
      containers:
      - name: flask-demo
        image: jirivasm/hello-wolrd-pyton:latest
        securityContext:
          privileged: false
          #privileged is not allowed
          runAsNonRoot: true
          capabilities:
           drop: ["ALL"]
        resources:
          limits:
            memory: "1Gi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
